--- a/src/index.css
+++ b/src/index.css
@@ -449,6 +449,19 @@ body {
 .Bigicon img {
   width: calc(var(--size-110) * 5);
 }
+.maps-bg {
+  aspect-ratio: 1920 / 791;
+  mask: url(../img/arc-mask.png);
+  -webkit-mask: url(../img/arc-mask.png);
+  mask-size: cover;
+  -webkit-mask-size: cover;
+  position: relative;
+}
+.maps-bg > img {
+  width: 100%;
+  height: 100%;
+  opacity: 0.44;
+}
 /* --
 -- 
 --  */
