--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.cdnfonts.com/css/general-sans");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -58,10 +57,17 @@ body {
   width: 100dvw;
   overflow-x: hidden;
   background-color: #fffef2;
-  font-family: "General Sans", sans-serif;
+  font-family: "noto", sans-serif;
 }
 
 @layer base {
+  @font-face {
+    font-family: "noto";
+    src: url("/fonts/NotoSansSC-Medium-V1.7_all.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+  }
+
   @font-face {
     font-family: "circular-web";
     src: url("/fonts/circularweb-book.woff2") format("woff2");
@@ -119,11 +125,11 @@ body {
   }
 
   .hero-heading {
-    @apply uppercase font-zentry font-black text-6xl sm:right-10 sm:text-6xl md:text-8xl lg:text-9xl;
+    @apply uppercase font-black text-4xl sm:right-10 sm:text-4xl md:text-6xl lg:text-7xl;
   }
 
   .about-subtext {
-    @apply absolute bottom-[-80dvh] left-1/2 w-full max-w-96 -translate-x-1/2 text-center font-circular-web text-lg md:max-w-[34rem];
+    @apply absolute bottom-[-80dvh] left-1/2 w-full max-w-96 -translate-x-1/2 text-center  text-lg md:max-w-[34rem];
   }
 
   .about-image {
@@ -131,11 +137,11 @@ body {
   }
 
   .animated-title {
-    @apply flex flex-col gap-1 text-7xl uppercase leading-[.8] text-white sm:px-32 md:text-[6rem];
+    @apply flex flex-col gap-1 text-4xl uppercase leading-[.8] text-white sm:px-32 sm:text-4xl md:text-5xl lg:text-6xl;
   }
 
   .animated-word {
-    @apply special-font font-zentry font-black opacity-0;
+    @apply font-black opacity-0;
     transform: translate3d(10px, 51px, -60px) rotateY(60deg) rotateX(-40deg);
     transform-origin: 50% 50% -150px !important;
     will-change: opacity, transform;
@@ -150,7 +156,7 @@ body {
   }
 
   .bento-title {
-    @apply uppercase md:text-6xl text-4xl font-black font-zentry;
+    @apply uppercase md:text-5xl text-3xl font-black;
   }
 
   .story-img-container {
@@ -1597,4 +1603,200 @@ a {
     justify-self: center;
     width: 78.5333333333vw;
   }
+}
+/* NewsPageDetail */
+.lh-detail {
+  background: url(../img/detail-bg.jpg) repeat center;
+  background-size: 100vw 31.145833333333332vw;
+}
+.detail-bottom {
+  width: 1682px;
+  width: clamp(841px, 87.60416666666667vw, 1682px);
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  z-index: 4;
+  padding: var(--size-90) 0 var(--size-140);
+  --color: #716561;
+  margin-top: var(--size-15-);
+}
+.detail-bottom::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, #fffced, #fefcf3);
+  border-radius: var(--size-100) 0 0 var(--size-10);
+  position: absolute;
+  left: 0;
+  top: 0;
+  clip-path: polygon(50% 0%, 100% 0, 100% 99%, 94% 100%, 0 100%, 0% 60%, 0 0);
+}
+.return-page {
+  width: calc(var(--size-90) + 2px);
+  position: absolute;
+  left: var(--size-100);
+  top: var(--size-15-);
+}
+.detail-bottom-top > .icon {
+  width: 214px;
+  width: clamp(107px, 11.145833333333334vw, 214px);
+  position: absolute;
+  right: var(--size-80);
+  top: calc(var(--size-100-) * 2);
+}
+.detail-bottom-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #413332;
+}
+.l-font24 {
+  font-size: 24px;
+  font-size: clamp(16px, 1.25vw, 24px);
+}
+.detail-bottom-title > * {
+  max-width: calc(var(--size-100) * 9);
+}
+h1 {
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  unicode-bidi: isolate;
+}
+.noto {
+  font-family: "noto";
+}
+.detail-bottom-crumbs {
+  aspect-ratio: 1001 / 44;
+  width: clamp(500px, 52.083333333333336vw, 1000px);
+  background: url(../img/detail-icon5.png) no-repeat center;
+  background-size: cover;
+  margin: var(--size-30) auto 0;
+  align-items: center;
+  padding: 0 var(--size-30);
+  color: #fff9dc;
+  padding-bottom: clamp(2px, 0.20833333333333334vw, 4px);
+  position: relative;
+  z-index: 2;
+}
+.l-font20 {
+  font-size: 20px;
+  font-size: clamp(16px, 1.0416666666666665vw, 20px);
+}
+.detail-bottom-crumbs > .left {
+  display: flex;
+  align-items: center;
+}
+.detail-bottom-crumbs > .left .star {
+  margin-right: var(--size-10);
+  position: relative;
+  top: 2px;
+  width: var(--size-20);
+}
+.detail-bottom-crumbs > .left .jt {
+  margin: 0 var(--size-10);
+  width: calc(var(--size-20) - 3px);
+  position: relative;
+  top: 1px;
+}
+.detail-bottom .right {
+  font-style: italic;
+  aspect-ratio: 1001 / 44;
+  color: #fff9dc;
+  width: clamp(500px, 52.083333333333336vw, 1000px);
+  margin: var(--size-45-) auto;
+  position: relative;
+  z-index: 3;
+  text-align: right;
+  padding: 0 var(--size-30);
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.detail-bottom-info {
+  padding: var(--size-90) 0 var(--size-50);
+  width: clamp(500px, 52.083333333333336vw, 1000px);
+  color: var(--color);
+  margin: auto;
+}
+.info-icon > *:first-child {
+  left: var(--size-60-);
+  top: var(--size-40-);
+}
+.info-icon > * {
+  width: calc(var(--size-80) * 2);
+  position: absolute;
+}
+.info-icon > *:last-child {
+  right: var(--size-60-);
+  bottom: var(--size-100-);
+}
+.detail-ccont .cont {
+  position: relative;
+  z-index: 2;
+}
+.l-font18 {
+  font-size: 18px;
+  font-size: clamp(14px, 0.9375vw, 18px);
+}
+.detail-ccont .cont p {
+  margin-top: var(--size-10);
+}
+.detail-ccont .cont h2 {
+  font-weight: bold;
+  margin-top: var(--size-20);
+}
+h2 {
+  display: block;
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  unicode-bidi: isolate;
+}
+.detail-bottom-icon > *.icon1 {
+  right: 0;
+  top: 0;
+  width: calc(var(--size-40) - 1px);
+}
+.detail-bottom-icon > * {
+  position: absolute;
+  pointer-events: none;
+}
+.detail-bottom-icon > .icon2 {
+  width: 235px;
+  width: clamp(117px, 12.239583333333332vw, 235px);
+  left: var(--size-30);
+  top: 20%;
+}
+.detail-bottom-icon > .icon3 {
+  width: 235px;
+  width: clamp(117px, 12.239583333333332vw, 235px);
+  right: var(--size-30);
+  top: 70%;
+}
+.detail-bottom-icon > .icon4 {
+  width: 267px;
+  width: clamp(133px, 13.90625vw, 267px);
+  left: var(--size-40);
+  bottom: var(--size-75-);
+}
+.detail-bottom-icon > .icon5 {
+  width: 1477px;
+  width: clamp(738px, 76.92708333333333vw, 1477px);
+  left: 50%;
+  bottom: var(--size-50);
+  transform: translateX(-50%);
+}
+.detail-bottom-icon > .icon6 {
+  width: var(--size-120);
+  right: 0;
+  bottom: 0;
 }
